2004-05-31  John ffitch  <jpff@codemist.co.uk>

	* Top/dl_opcodes.c (csoundOpenLibrary): On mac the dynamic
	libraries are called .dylib

2004-05-27  John ffitch  <jpff@codemist.co.uk>

	* InOut/widgets.cpp (fl_setWidgetValue_set, fl_setWidgetValue):
	New code stolen from CsoundAV and changed to Csound5 format

	* Engine/entry2.c: Change entry for FLsetVal

	* InOut/widgets.cpp: SNAPSHOT::get returns error state
	(get_snap): and used

2004-05-16  Michael Gogins <gogins@pipeline.com>

	* Amended SConstruct to keep a list of all dependencies to make
	sure that zipfiles get built at the very end.

	* Updated csound.pdf with information about -odac:xxx on ALSA.

2004-05-20  John ffitch  <jpff@codemist.co.uk>

	* InOut/rtpa.c (playopen_): Decode dac:xxx rather than environment
	variable 

	* InOut/libsnd.c (sfopenin, sfopenout): Decode dac:xxx style device

	* H/csoundCore.h (ENVIRON_): type in instance was wrong (missing *)

	* H/csoundCore.h (ENVIRON_): 
	* H/cs.h (rtin_devs, rtout_devs): 
	* H/csdl.h (rtin_devs, rtout_devs): 
	* Engine/oload.c: Added rtin_devs and rtout_devs for device names
	rather than just numbers

2004-05-19  John ffitch  <jpff@codemist.co.uk>

	* Engine/entry1.c: Added "tablew" as a 0xfffe opcode

	* SConstruct (customSHLINKFLAGS): Darwin seems to need -dynamic

	* Top/dl_opcodes.c (dlsymIntern): SLOOKUPSYMBOLINIMAGE_OPTION_BIND
	-> NSLOOKUPSYMBOLINIMAGE_OPTION_BIND

2004-05-18  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/vdelayk.c (partial_maximum): Added maxk opcode

2004-05-17  John  <jpff@cage.codemist.co.uk>

	* SConstruct: Use -Wl,-Bdynamic as it is  linker option 

	* strings/makedb.c (main): Correct format in prontf twice for
	longs

	* Top/main.c (install_signal_handler): Retore signal handling

2004-05-17  John ffitch  <jpff@codemist.co.uk>

	* InOut/rtpa.c (playopen_): Allow selection of ALSA device via
	environment variable

	* Engine/entry1.c: Restored tablekt and tableikt

2004-05-16  Michael Gogins <gogins@pipeline.com>
